k8s-configurations/spring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-svc
  labels:
    app: spring-boot-svc
spec:
  type: ClusterIP
  ports:
    - name: app
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: spring-boot
